# diffusion2D

./: README.md  pyproject.toml
src/: diffusion2d.py  output_diffusion.py
