[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RomanWi_diffusion2d"
version = "0.0.1"
authors = [
  { name="Roman", email="roman.winter@iws.uni-stuttgart.de" },
]
description = "diffusion2d example"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
